# contrarian-stocks-gemini

./: .gitignore  Gemini.md  contrarian-screener-plan.md  sleek-ui-plan.md  upload.sh
contrarian-screener/: GETTING_STARTED.md  README.md  app.py  main.py  pyproject.toml
contrarian-screener/backend/: main.py
contrarian-screener/contrarian/: cli.py  config.py
contrarian-screener/contrarian/analysis/: fundamentals.py  pipeline.py  scoring.py  sentiment.py
contrarian-screener/contrarian/data/: cache.py  finviz.py  reddit.py  stocktwits.py  yahoo.py
contrarian-screener/contrarian/models/: stock.py
contrarian-screener/contrarian/universes/: tickers.py
contrarian-screener/data/: watchlist.json
contrarian-screener/frontend/: package.json  pnpm-lock.yaml
contrarian-screener/frontend/app/: layout.tsx  page.tsx
contrarian-screener/frontend/app/screen/: page.tsx
contrarian-screener/frontend/components/: sidebar.tsx  stock-card.tsx
